# minecraft-clone

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Config.h.in  LICENSE  MCConfig.h.in  README.md  minecraft-clone.sln  prova.txt
minecraft-clone/: CMakeLists.txt  imgui.ini  minecraft-clone.vcxproj  minecraft-clone.vcxproj.filters
minecraft-clone/res/shaders/: Basic.shader  Instancing.shader
minecraft-clone/res/textures/: desktop.ini
minecraft-clone/src/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  GLErrorManager.cpp  GLErrorManager.h  Game.cpp  Game.h  IndexBuffer.cpp  IndexBuffer.h  Matrix.hpp  Noise.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  ThreadPool.hpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.hpp  Window.cpp  Window.h  main.cpp
minecraft-clone/src/tests/: Test.cpp  Test.h  Test3D.cpp  Test3D.h  TestBatchRendering.cpp  TestBatchRendering.h  TestClearColor.cpp  TestClearColor.h  TestDynamic.cpp  TestDynamic.h  TestTexture2D.cpp  TestTexture2D.h  TestTextureAtlas.cpp  TestTextureAtlas.h
res/shaders/: Basic.shader  shader.frag  shader.vert  shader_billboard.vert  shader_box.frag  shader_box.vert  shader_chunk.frag  shader_chunk.vert  shader_clouds.frag  shader_gui.vert  shader_outline.frag  shader_outline.vert  shader_quad.frag  shader_quad.vert  shader_sky.frag  shader_sky.vert  shader_sprite.frag  shader_sprite.vert  shader_srpite.vert  shader_stars.frag  shader_stars.vert
src/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Frustum.cpp  Frustum.h  Game.cpp  Game.h  Gui.cpp  Gui.h  GuiManager.cpp  GuiManager.h  GuiRenderer.cpp  GuiRenderer.h  IndexBuffer.cpp  IndexBuffer.h  Keycodes.h  Matrix.hpp  Matrix3D.hpp  Noise.cpp  Noise.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  ThreadPool.hpp  Timer.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.hpp  (+3 more)
src/camera/: Camera.cpp  Camera.h  Constants.h  Frustum.cpp  Frustum.h
src/entities/: CursorEntity.cpp  CursorEntity.h  Entity.cpp  Entity.h  Entity.hpp  GuiEntity.cpp  GuiEntity.h  Moon.cpp  Moon.h  Player.cpp  Player.h  QuadEntity.cpp  QuadEntity.h  Sky.cpp  Sky.h  Sun.cpp  Sun.h  SunEntity.cpp  SunEntity.h
src/graphics/: ChunkRenderer.cpp  ChunkRenderer.h  GuiRenderer.cpp  GuiRenderer.h  IndexBuffer.cpp  IndexBuffer.h  QuadRenderer.cpp  QuadRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SkyRenderer.cpp  SkyRenderer.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.hpp  Window.cpp  Window.h  WindowListener.h
src/gui/: Cursor.cpp  Cursor.h  Gui.cpp  Gui.h  GuiManager.cpp  GuiManager.h  GuiRenderer.cpp  GuiRenderer.h
src/sky/: Clouds.cpp  Clouds.h  Moon.cpp  Moon.h  SkyBox.cpp  SkyBox.h  SkyEntities.cpp  SkyEntities.h  Star.cpp  Star.h  Stars.cpp  Stars.h  Sun.cpp  Sun.h
src/utils/: Entity.hpp  ImGui.cpp  ImGui.h  InputHandler.cpp  InputHandler.h  Items.h  Keycodes.h  Logger.cpp  Logger.h  Matrix3D.hpp  Noise.cpp  Noise.h  Physics.cpp  Physics.h  Random.hpp  RayCast.hpp  Subject.hpp  ThreadPool.hpp  Timer.cpp  Timer.h
src/world/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Light.cpp  Light.h  TerrainGenerator.h
